src/objects/OrderApi__Scheduled_Payment__c.object
<CustomObject>
    <description>Scheduled Payments track the status and details around recurring and scheduled invoice E-Payments related to a Sales Order.</description>
    <fields>
        <fullName>OrderApi__API_Response__c</fullName>
        <description>**System Calculated** API Response from the callout made for processing the payment</description>
        <inlineHelpText>**System Calculated** API Response from the callout made for processing the payment</inlineHelpText>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount__c</fullName>
        <description>**System Calculated** The amount charged successfully against the Scheduled Payment.</description>
        <inlineHelpText>**System Calculated** The amount charged successfully against the Scheduled Payment.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Custom_Scheduled_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked these scheduled payments wont run as part of the OrderApi ScheduledPaymentBatchable.cls ** Defaults unchecked **</description>
        <inlineHelpText>When checked these scheduled payments wont run as part of the OrderApi ScheduledPaymentBatchable.cls ** Defaults unchecked **</inlineHelpText>
        <label>Custom Scheduled Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the system has generated an E-Payment regardless of the result.</description>
        <inlineHelpText>Checked if the system has generated an E-Payment regardless of the result.</inlineHelpText>
        <label>E-Payment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked if the Scheduled Payment was processed with errors.</description>
        <inlineHelpText>**System Calculated** Checked if the Scheduled Payment was processed with errors.</inlineHelpText>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Invoice scheduled for payment.</description>
        <inlineHelpText>Link to the Invoice scheduled for payment.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when the Scheduled Payment has been cancelled.</description>
        <inlineHelpText>**System Calculated/Override** Checked when the Scheduled Payment has been cancelled.</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Payment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** checked if a callout is made and the payment is processed</description>
        <inlineHelpText>**System Calculated** checked if a callout is made and the payment is processed</inlineHelpText>
        <label>Is Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Field** Do not manually update/override. Checked when the system has processed the API transaction for the scheduled payment.</description>
        <inlineHelpText>**System Field** Do not manually update/override. Checked when the system has processed the API transaction for the scheduled payment.</inlineHelpText>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Description__c</fullName>
        <description>** System Calculated ** Description formula for scheduled payments.</description>
        <formula>IF (OrderApi__Invoice__c != null,
            $Label.orderapi__payment_description_prefix_invoice &amp;  OrderApi__Invoice__r.Name,
            IF (OrderApi__Subscription__c != null,
            $Label.orderapi__payment_description_prefix_invoice &amp; &quot; &quot; &amp; OrderApi__Subscription__r.OrderApi__Item__r.OrderApi__Display_Name__c,
            IF (OrderApi__Sales_Order__c != null,
            $Label.orderapi__payment_description_prefix_sales_order &amp; &quot; (REF:&quot; &amp; OrderApi__Sales_Order__r.Name &amp; &quot;)&quot;,
            &quot;&quot;
            )))</formula>
        <inlineHelpText>** System Calculated ** Description formula for scheduled payments.</inlineHelpText>
        <label>Payment Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the Payment Gateway to use for the Scheduled Payment.</description>
        <inlineHelpText>** Required ** Link to the Payment Gateway to use for the Scheduled Payment.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <description>**Required** Master-detail Payment Method. Link to the E-Payment Method that will be used/has been used for the Schedule Payment.</description>
        <inlineHelpText>**Required** Master-detail Payment Method. Link to the E-Payment Method that will be used/has been used for the Schedule Payment.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Processed_Date__c</fullName>
        <description>**System Field** Do not manually update/override. The date the Scheduled Payment was processed.</description>
        <inlineHelpText>**System Field** Do not manually update/override. The date the Scheduled Payment was processed.</inlineHelpText>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to related Sales Order.</description>
        <inlineHelpText>**Required** Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Date__c</fullName>
        <description>**System Calculated/Override** The date scheduled for the charge against the linked Payment Method.</description>
        <inlineHelpText>**System Calculated/Override** The date scheduled for the charge against the linked Payment Method.</inlineHelpText>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Subscription</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Subscription</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Succeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Field** Do not manually update/override. Checked when the schedule payment has been successfully charged.</description>
        <inlineHelpText>**System Field** Do not manually update/override. Checked when the schedule payment has been successfully charged.</inlineHelpText>
        <label>Succeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__System_Message__c</fullName>
        <description>**System Calculated** API/Gateway Message for decline/success descriptions.</description>
        <inlineHelpText>**System Calculated** API/Gateway Message for decline/success descriptions.</inlineHelpText>
        <label>System Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Token__c</fullName>
        <description>**System Calculated** Token used for API transactions.</description>
        <formula>OrderApi__Payment_Method__r.OrderApi__Payment_Method_Token__c</formula>
        <inlineHelpText>**System Calculated** Token used for API transactions.</inlineHelpText>
        <label>Token</label>
        <type>Text</type>
    </fields>
    <label>Scheduled Payment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Scheduled Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>